<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context="com.administrator.elwj.LoginActivity">
    <include layout="@layout/title"/>
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:indeterminate="false" />

    <ScrollView
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="@dimen/padding_top_hotproduct"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey"
                android:layout_marginBottom="@dimen/margin_icon_left" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_login"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_marginTop="@dimen/margin_icon_left5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/login"/>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_icon_left20"
                    android:gravity="center_vertical">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/prompt_phone"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:background="#00000000" />

                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="@dimen/height_line"
                    android:background="@color/orangered"
                    />
                <TextView
                    android:id="@+id/tv_getauthcode"
                    android:clickable="true"
                    android:layout_marginLeft="@dimen/margin_icon_left"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_login"
                    android:textColor="@color/orangered"
                    android:textSize="@dimen/text_forgetpassword"
                    android:text="@string/getauthcode"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/padding_top_hotproduct"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey"/>


            <LinearLayout
                android:layout_marginTop="@dimen/padding_top_hotproduct"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey"
                android:layout_marginBottom="@dimen/margin_icon_left" />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_login"
                android:orientation="horizontal"
                android:weightSum="1">
                <ImageView
                    android:layout_marginTop="@dimen/margin_icon_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/login_authcode2"/>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_icon_left20"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_inputauthcode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/error_authcode_required"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:background="#00000000"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/padding_top_hotproduct"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey"/>
            <Button
                android:id="@+id/bt_sign_in"
                android:background="@drawable/login_bg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/padding_top_hotproduct"
                android:text="@string/action_sign_in"
                android:textSize="@dimen/text_login"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <RelativeLayout
                android:clickable="true"
                android:id="@+id/accountlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginTop="@dimen/padding_icon">


                <TextView
                    android:id="@+id/quicklogintextview"
                    android:layout_toLeftOf="@+id/quickloginreforward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkgrey"
                    android:text="@string/account_passwordLogin"
                    android:textSize="@dimen/text_forgetpassword"/>

                <ImageView
                    android:id="@+id/quickloginreforward"
                    android:layout_alignParentRight="true"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/login_goxhdpi"/>

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
