<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context="com.administrator.elwj.LoginActivity">

    <include
        android:id="@+id/title_head"
        layout="@layout/title" />
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_below="@+id/title_head"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:indeterminate="false"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_below="@+id/login_progress"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="5dp"
                android:background="#ffe5e5e5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_login"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity = "center_vertical"
                    android:layout_marginLeft="3dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/login" />


                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_icon_left20"
                    android:background="#00000000"
                    android:hint="@string/prompt_phone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dp"
                android:background="#ffe5e5e5" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="@dimen/padding_top_hotproduct"
                android:background="#ffe5e5e5" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_login"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/login_password" />


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_icon_left20"
                    android:background="#00000000"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:layout_weight="1"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="@dimen/height_line"
                    android:layout_marginTop="10dp"
                    android:background="@color/orangered" />

                <TextView
                    android:id="@+id/forgetpassword"
                    android:layout_width="wrap_content"
                    android:clickable="true"
                    android:layout_height="@dimen/text_login"
                    android:layout_marginLeft="@dimen/margin_icon_left"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:text="@string/forgetpassword"
                    android:textColor="@color/orangered"
                    android:textSize="@dimen/text_forgetpassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dp"
                android:background="#ffe5e5e5" />


            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:background="@mipmap/btn_login"
                android:textColor="@color/white"
                android:textSize="@dimen/text_login"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/quicklogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_icon"
                android:visibility="gone"
                android:weightSum="1">


                <TextView
                    android:id="@+id/quicklogintextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/quickloginreforward"
                    android:clickable="true"
                    android:text="@string/quicklogin"
                    android:textColor="@color/orangered"
                    android:textSize="@dimen/text_forgetpassword" />

                <ImageView
                    android:id="@+id/quickloginreforward"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/reforward" />

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
    <include layout="@layout/logo_bottom"/>
</RelativeLayout>
