<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <include layout="@layout/title" />

    <LinearLayout
        android:id="@+id/email_register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="40dp"
            android:background="#ffe5e5e5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_icon_left5"
                android:text="@string/add86"
                android:textColor="@color/black"
                android:textSize="@dimen/text_forgetpassword" />


            <AutoCompleteTextView
                android:id="@+id/phone_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_icon_left20"
                android:layout_weight="1"
                android:background="#00000000"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="@dimen/height_line"
                android:background="@color/orangered"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/getauthcode"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_icon_left"
                android:clickable="true"
                android:gravity="center"
                android:singleLine="false"
                android:text="@string/getauthcode"
                android:textColor="@color/orangered"
                android:textSize="@dimen/text_forgetpassword" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="8dp"
            android:background="#ffe8e8e8" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="20dp"
            android:background="@color/grey" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authcode"
                android:textColor="@color/black"
                android:textSize="@dimen/text_forgetpassword" />

            <EditText
                android:id="@+id/et_authcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_icon_left20"
                android:background="#00000000"
                android:maxLines="1"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="8dp"
            android:background="#ffe8e8e8" />


        <Button
            android:id="@+id/nextstep_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@mipmap/reg_next_step" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_forgetpassword" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_icon_left20"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:gravity="center"
                    android:hint="@string/need_more_combination"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:background="@color/white"-->
        <!--android:gravity="center_vertical">-->

        <!--<TextView-->
        <!--android:id="@+id/tv_nickname_tips"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:text="昵称"-->
        <!--android:textColor="@color/black" />-->

        <!--<ImageView-->
        <!--android:id="@+id/iv_nickname_tips"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_marginRight="@dimen/margin_icon_left"-->
        <!--android:src="@mipmap/next_gray" />-->

        <!--<EditText-->
        <!--android:id="@+id/et_nickname"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_toLeftOf="@+id/iv_nickname_tips"-->
        <!--android:layout_toRightOf="@id/tv_nickname_tips"-->
        <!--android:background="@null"-->
        <!--android:hint="填写昵称"-->
        <!--android:textDirection="rtl" />-->
        <!--</RelativeLayout>-->

        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:background="@color/white"-->
        <!--android:gravity="center_vertical">-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:text="所在地"-->
        <!--android:textColor="@color/black" />-->

        <!--<LinearLayout-->
        <!--android:id="@+id/linear_belong_address"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginRight="@dimen/margin_icon_left"-->
        <!--android:clickable="true"-->
        <!--android:gravity="center_vertical"-->
        <!--android:orientation="horizontal">-->

        <!--<TextView-->
        <!--android:id="@+id/tv_address_choose"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="请选择所在地"-->
        <!--android:textColor="@color/activity_tvcolor" />-->

        <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/margin_icon_left"-->
        <!--android:src="@mipmap/next_gray" />-->
        <!--</LinearLayout>-->
        <!--</RelativeLayout>-->

        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:background="@color/white"-->
        <!--android:gravity="center_vertical">-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:text="所属社区"-->
        <!--android:textColor="@color/black" />-->

        <!--<LinearLayout-->
        <!--android:id="@+id/linear_belong_community"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginRight="@dimen/margin_icon_left"-->
        <!--android:clickable="true"-->
        <!--android:gravity="center_vertical"-->
        <!--android:orientation="horizontal">-->

        <!--<TextView-->
        <!--android:id="@+id/tv_community_choose"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text=""-->
        <!--android:textColor="@color/activity_tvcolor" />-->

        <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/margin_icon_left"-->
        <!--android:src="@mipmap/next_gray" />-->
        <!--</LinearLayout>-->
        <!--</RelativeLayout>-->

        <!--<Button-->
        <!--android:id="@+id/nextstep_button"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_marginTop="@dimen/margin_icon_left"-->
        <!--android:background="@drawable/register_button"-->
        <!--android:text="@string/next_step"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="@dimen/text_login"-->
        <!--android:textStyle="bold" />-->

    </LinearLayout>

    <include layout="@layout/logo_bottom" />

</LinearLayout>
